--- a/index.html
+++ b/index.html
@@ -47,34 +47,106 @@
 					<div title="Menu" class="hamburguer visible-sm visible-xs">
 						<span></span>
 					</div>
-					<a href="#" class="a-header"><img id="logo-hbs-cambio" src="./assets/images/lien-logo-horizntal.svg" alt="Logo LIEN"></a>
+					<a href="#" class="a-header"><img id="logo-lien-top" src="./assets/images/lien-logo-top.svg" alt="Logo LIEN"></a>
 				</header>
 				<nav class="menu-desktop bg-transparent bg-shared hidden-sm hidden-xs visible-md visible-lg">
 					<div class="menu-container nav navbar-nav">
 						<ul>
-							<li class="menu-item"><a href="#home" class="go-menu">Home</a></li>
-							<li class="menu-item"><a href="#sobre" class="go-menu">Sobre</a></li>
-							<li class="menu-item"><a href="#servicos" class="go-menu">Área do Franqueado</a></li>
-							<li class="menu-item"><a href="#sustentabilidade" class="go-menu">Dicas</a></li>
-							<li class="menu-item"><a href="#contato" class="go-menu">Contato</a></li>
+							<li class="menu-item">
+								<a href="#seja-um-franqueado" class="go-menu">Seja um Franqueado</a>
+							</li>
+							<li class="menu-item">
+								<a href="#sobre" class="go-menu">Sobre</a>
+							</li>
+							<li class="menu-item">
+								<a href="#duvidas-frequentes" class="go-menu">Dúvidas Frequentes</a>
+							</li>
+							<li class="menu-item">
+								<a href="#glossario" class="go-menu">Glossário</a>
+							</li>
+							<li class="menu-item">
+								<a href="#seguradoras" class="go-menu">Seguradoras</a>
+							</li>
+							<li class="menu-item">
+								<a href="#contato" class="go-menu">Contato</a>
+							</li>
 						</ul>
 					</div>
 				</nav>
 				<nav class="menu-mobile bg-transparent bg-shared visible-sm visible-xs hidden-md hidden-lg">
 					<div class="menu-container nav navbar-nav">
 						<ul>
-							<li class="menu-item"><a href="#home" class="go-menu">Home</a></li>
-							<li class="menu-item"><a href="#sobre" class="go-menu">Sobre</a></li>
-							<li class="menu-item"><a href="#servicos" class="go-menu">Área do Franqueado</a></li>
-							<li class="menu-item"><a href="#sustentabilidade" class="go-menu">Dicas</a></li>
-							<li class="menu-item"><a href="#trabalhe-conosco" class="go-menu">Trabalhe Conosco</a></li>
-							<li class="menu-item"><a href="#contato">Contato</a></li>
+							<li class="menu-item">
+								<a href="#seja-um-franqueado" class="go-menu">Seja um Franqueado</a>
+							</li>
+							<li class="menu-item">
+								<a href="#sobre" class="go-menu">Sobre</a>
+							</li>
+							<li class="menu-item">
+								<a href="#duvidas-frequentes" class="go-menu">Dúvidas Frequentes</a>
+							</li>
+							<li class="menu-item">
+								<a href="#glossario" class="go-menu">Glossário</a>
+							</li>
+							<li class="menu-item">
+								<a href="#seguradoras" class="go-menu">Seguradoras</a>
+							</li>
+							<li class="menu-item">
+								<a href="#contato" class="go-menu">Contato</a>
+							</li>
 						</ul>
 					</div>
 				</nav>
 			</div>
 		</nav>
 		<main>
+			<section id="home" data-stellar-background-ratio="0.1">
+				<div class="decoration-1 decoration" data-stellar-ratio="2"></div>
+				<div class="decoration-2 decoration" data-stellar-ratio="0.5"></div>
+				<div class="decoration-3 decoration" data-stellar-ratio="1"></div>
+				<div class="container">
+					<div class="row row-home">
+						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
+							<h1 class="title-big-white">Seja um <br/> <span class="extra-big">Franqueado</span></h1>
+							<button class="lien-button">Baixar Apresentação</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="sobre">
+				<div class="container">
+					<div class="row row-sobre">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+							<h1 class="title-section">Sobre</h1>
+							<img src="./assets/images/lien-about-logo.svg" class="img-decorative" alt="Logo LIEN" />
+							<h2 class="title-h2">Conheça um pouco mais sobre a LIEN Corretora de Seguros.</h2>
+							<p class="p-default">Saber que seus bens estão seguros é viver com mais tranquilidade, podendo dedicar seu tempo no que mais importa para você.
+							Pensando nisso a <span>LIEN Corretora de Seguros</span> trabalha oferecendo facilidade e transparência. Uma corretora atual que busca
+							a melhoria contínua em seus processos e serviços.</p>
+							<p class="p-default">Nosso <span>objetivo</span> é proporcionar segurança e despreocupação, por isso contamos com uma consultoria especializada que visa orientar
+							e apresentar a proposta de seguro mais adequada às suas necessidades, através de uma análise minuciosa para oferecer o melhor
+							custo-benefício com a certeza de uma apólice bem elaborada.</p>
+							<p class="p-default">No <span>site</span> é possível solicitar cotações, tirar dúvidas e compreender em detalhes tudo sobre o seguro contratado. Isso permitirá
+							usufruir de todas as facilidades que o seguro oferece e ainda ter a certeza de estar realmente assistido, caso tenha a necessidade
+							de acionar os serviços.</p>
+							<p class="p-default">Com a <span>LIEN Corretora de Seguros</span> você estará protegido e terá todo o suporte de nossa consultoria especializada com agilidade
+							e clareza. Conheça nossos serviços, faça um seguro com a LIEN.</p>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="cta-1">
+				<div class="container">
+					<div class="row row-cta">
+						<div class="col-lg-12">
+							<h1 class="title-cta">Conheça as nossas opções de seguro <br/><span class="extra-big">Empresarial</span></h1>
+							<h2 class="sub-title-cta">A diferença de cotações entre bancos, corretoras e casas de câmbio pode chegar a 37%. A Câmbio Store reúne todas as opções
+								em um único lugar para facilitar a comparação dos valores e a troca de moeda estrangeira.</h2>
+							<button class="lien-button lien-button-cta">Fale Conosco</button>
+						</div>
+					</div>
+				</div>
+			</section>
 			<footer>
 				<div class="container">
 				</div>
