Criação de Novos Blocos

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 								<a href="#glossario" class="go-menu">Glossário</a>
 							</li>
 							<li class="menu-item">
-								<a href="#seguradoras" class="go-menu">Seguradoras</a>
+								<a href="#seguradoras-associadas" class="go-menu">Seguradoras</a>
 							</li>
 							<li class="menu-item">
 								<a href="#contato" class="go-menu">Contato</a>
@@ -89,7 +89,7 @@
 								<a href="#glossario" class="go-menu">Glossário</a>
 							</li>
 							<li class="menu-item">
-								<a href="#seguradoras" class="go-menu">Seguradoras</a>
+								<a href="#seguradoras-associadas" class="go-menu">Seguradoras</a>
 							</li>
 							<li class="menu-item">
 								<a href="#contato" class="go-menu">Contato</a>
@@ -100,15 +100,34 @@
 			</div>
 		</nav>
 		<main>
-			<section id="home" data-stellar-background-ratio="0.1">
+			<section id="seja-um-franqueado" data-stellar-background-ratio="0.1">
 				<div class="decoration-1 decoration" data-stellar-ratio="2"></div>
 				<div class="decoration-2 decoration" data-stellar-ratio="0.5"></div>
 				<div class="decoration-3 decoration" data-stellar-ratio="1"></div>
+				<div class="abf" data-stellar-ratio="1.2"></div>
 				<div class="container">
 					<div class="row row-home">
 						<div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
 							<h1 class="title-big-white">Seja um <br/> <span class="extra-big">Franqueado</span></h1>
-							<button class="lien-button">Baixar Apresentação</button>
+							<p class="p-default">Preencha o cadastro abaixo e faça o <span>download</span> agora mesmo da nossa apresentação com as vantagens de ser um franqueado <span>LIEN.</span></p>
+							<form id="form-franqueado">
+								<div class="col-lg-12 no-padding">
+									<input type="text" placeholder="Nome" id="name" name="name"/>
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding">
+									<input type="text" placeholder="Telefone" id="phone" name="phone" />
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding padding-left">
+									<input type="text" placeholder="E-mail" id="email" name="email" />
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding">
+									<input type="text" placeholder="Estado" id="state" name="state" />
+								</div>
+								<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 no-padding padding-left">
+									<input type="text" placeholder="Cidade" id="city" name="city" />
+								</div>
+							</form>
+							<button class="lien-button"><svg xmlns="http://www.w3.org/2000/svg" viewBox="602 926.4 38 38"> <defs> <style>.cls-1{fill: #58595b;}</style> </defs> <g id="down-arrow" transform="translate(600 926.4)"> <g id="Group_56" data-name="Group 56" transform="translate(2)"> <path id="Path_48" data-name="Path 48" class="cls-1" d="M38,19A19,19,0,1,0,19,38,19.022,19.022,0,0,0,38,19ZM1.9,19A17.1,17.1,0,1,1,19,36.1,17.12,17.12,0,0,1,1.9,19Z"/> <path id="Path_49" data-name="Path 49" class="cls-1" d="M170.966,144.532l5.339-5.339a.948.948,0,0,0-1.341-1.341l-3.719,3.719V127.353a.953.953,0,1,0-1.906,0v14.211l-3.719-3.719a.948.948,0,1,0-1.341,1.341l5.339,5.339a.964.964,0,0,0,1.348.008Z" transform="translate(-151.292 -116.606)"/> </g> </g></svg>Baixar Apresentação</button>
 						</div>
 					</div>
 				</div>
@@ -147,8 +166,75 @@
 					</div>
 				</div>
 			</section>
+			<section id="duvidas-frequentes">
+				<div class="container">
+					<div class="row row-duvidas-frequentes">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+							<h1 class="title-section">Dúvidas Frequentes</h1>
+							<h2 class="title-h2">A LIEN te ajuda a entender melhor o mundo dos seguros.</h2>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="cta-2">
+				<div class="container">
+					<div class="row row-cta">
+						<div class="col-lg-12">
+							<h1 class="title-cta">Conheça as nossas opções de seguro <br/><span class="extra-big">Vida</span></h1>
+							<h2 class="sub-title-cta">A diferença de cotações entre bancos, corretoras e casas de câmbio pode chegar a 37%. A Câmbio Store reúne todas as opções
+								em um único lugar para facilitar a comparação dos valores e a troca de moeda estrangeira.</h2>
+							<button class="lien-button lien-button-cta">Fale Conosco</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="glossario">
+				<div class="container">
+					<div class="row row-glossario">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+							<h1 class="title-section">Glossário</h1>
+							<h2 class="title-h2">Que tal saber mais sobre seguros de A a Z?</h2>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="cta-3">
+				<div class="container">
+					<div class="row row-cta">
+						<div class="col-lg-12">
+							<h1 class="title-cta">Conheça as nossas opções de seguro <br/><span class="extra-big">Auto</span></h1>
+							<h2 class="sub-title-cta">A diferença de cotações entre bancos, corretoras e casas de câmbio pode chegar a 37%. A Câmbio Store reúne todas as opções
+								em um único lugar para facilitar a comparação dos valores e a troca de moeda estrangeira.</h2>
+							<button class="lien-button lien-button-cta">Fale Conosco</button>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="seguradoras-associadas">
+				<div class="container">
+					<div class="row row-seguradoras-associadas">
+						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
+							<h1 class="title-section">Seguradoras Associadas</h1>
+							<h2 class="title-h2">Conheça quem são as nossas seguradoras associadas.</h2>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section id="contato">
+				<div class="container">
+					<div class="row row-contato">
+						<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+							<h1 class="title-section">Contato</h1>
+							<h2 class="title-h2">Entre em contato com a LIEN Corretora de Seguros <br/>Nós estamos prontos para lhe atender!</h2>
+						</div>
+					</div>
+				</div>
+			</section>
 			<footer>
 				<div class="container">
+					<div class="row">
+						<p>Footer</p>
+					</div>
 				</div>
 			</footer>
 		</main>
