Finalização dos Outros Blocos

--- a/index.html
+++ b/index.html
@@ -201,6 +201,19 @@
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<h1 class="title-section">Dúvidas Frequentes</h1>
 							<h2 class="title-h2">A LIEN te ajuda a entender melhor o mundo dos seguros.</h2>
+							<p class="p-light">clique no tópico para ver mais</p>
+							<h3>Seguro de Automóvel</h3>
+							<p class="question">1. O que caracteriza a indenização integral em caso de ocorrência de sinistro?</p>
+							<p class="awnser">R. A indenização integral é caracterizada quando os prejuízos resultantes de um mesmo sinistro atingirem ou ultrapassarem 75% (ou percentual inferior quando previsto na apólice) do valor contratado pelo segurado. Em caso de roubo ou furto do veículo sem que o mesmo seja recuperado, há também a indenização integral.</p>
+							<p class="question">2. Como devo proceder para o recebimento de indenização integral?</p>
+							<p class="awnser">R. No caso de indenização integral, o segurado deverá, ocorrendo sinistro, avisar imediatamente a seguradora, preencher o formulário de aviso de sinistro e apresentar a documentação necessária, definida nas condições gerais do seguro. Nos casos de indenização integral, o documento de transferência de propriedade do veículo deverá ser devidamente preenchido com os dados de seu proprietário e da sociedade seguradora.</p>
+							<h3 class="closed">Capitalização</h3>
+							<h3 class="closed">DPVAT - Seguro de Danos Pessoais Causados por Veículos Automotor</h3>
+							<h3 class="closed">Perguntas sobre planos por sobrevivência - VGBL e PGBL.</h3>
+							<h3 class="closed">Perguntas sobre previdência complementar aberta.</h3>
+							<h3 class="closed">Perguntas sobre seguro de pessoas.</h3>
+							<h3 class="closed">Perguntas sobre seguro residencial.</h3>
+							<h3 class="closed">Perguntas sobre seguros (dúvidas referentes a todos os tipos de seguro).</h3>
 						</div>
 					</div>
 				</div>
@@ -243,6 +256,30 @@
 						<div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
 							<h1 class="title-section">Glossário</h1>
 							<h2 class="title-h2">Que tal saber mais sobre seguros de A a Z?</h2>
+							<h3>Com qual letra começa o termo que procura?</h3>
+							<h4><span>A</span> B C D E F G H I J L M N O P Q R S Q U V X Z</h4>
+							<p class="title-glossario">ABALROAMENTO</p>
+							<p class="description-glossario">Choque do navio ou embarcação com outro navio ou embarcação, cais, bóia, ou qualquer outro objeto que possa gerar algum dano, de maneira acidental. (Circular SUSEP 354/07).</p>
+							<div class="box-relative">
+								<input type="text" placeholder="Filtrar"/>
+								<button class="filter"></button>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding">
+								<ul>
+									<li>ABALROAMENTO</li>
+									<li>ACEIRO</li>
+									<li>ACIDENTE PESSOAL</li>
+									<li>ACIDENTE PESSOAL DE PASSAGEIROS</li>
+								</ul>
+							</div>
+							<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 no-padding">
+								<ul>
+									<li>ABALROAMENTO</li>
+									<li>ACEIRO</li>
+									<li>ACIDENTE PESSOAL</li>
+									<li>ACIDENTE PESSOAL DE PASSAGEIROS</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -287,6 +324,72 @@
 							<h2 class="title-h2">Conheça quem são as nossas seguradoras associadas.</h2>
 						</div>
 					</div>
+					<div class="row row-items">
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="col-lg-3 col-md-3 col-sm-6">
+							<div class="box-relative">
+								<div class="item-img"></div>
+								<h2>Azul Seguros</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+					</div>
 				</div>
 			</section>
 			<!-- Contato -->
@@ -325,7 +428,16 @@
 			<footer>
 				<div class="container">
 					<div class="row">
-						<p>Footer</p>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-left">
+							<img src="./assets/images/lien-abf-footer.svg" alt="Logo ABF"/>
+							<p>© 2015 - 2018 - LIEN Corretora de Seguros.</p>
+							<p>Associada ABF.</p>
+						</div>
+						<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 col-right">
+							<img src="./assets/images/lien-footer-logo.svg" alt="Logo LIEN Branco"/>
+							<p>CNPJ: 22.170.308/0001-18. Cornélio Procópio - Paraná</p>
+							<p>(43) 5094-5050</p>
+						</div>
 					</div>
 				</div>
 			</footer>
