--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 			<!-- Seja um Franqueado -->
 			<section id="seja-um-franqueado" data-stellar-background-ratio="0.1">
 				<div class="decoration-1 decoration" data-stellar-ratio="2"></div>
-				<div class="decoration-2 decoration" data-stellar-ratio="0.5"></div>
-				<div class="decoration-3 decoration" data-stellar-ratio="1"></div>
+				<div class="decoration-2 decoration" data-stellar-ratio="1.5"></div>
+				<div class="decoration-3 decoration" data-stellar-ratio="3"></div>
 				<div class="abf" data-stellar-ratio="1.2"></div>
 				<div class="container">
 					<div class="row row-home">
@@ -221,7 +221,7 @@
 			<!-- CTA 2 -->
 			<section id="cta-2" class="cta-default">
 				<div class="container-fluid no-padding">
-					<div id="carousel-cta-1" class="owl-carousel owl-theme carousel-default">
+					<div id="carousel-cta-2" class="owl-carousel owl-theme carousel-default">
 						<div class="item">
 							<div class="bg-cta" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('./assets/images/lien-bg-cta-1.jpg');">
 								<div class="row row-cta">
@@ -287,7 +287,7 @@
 			<!-- CTA 3 -->
 			<section id="cta-3" class="cta-default">
 				<div class="container-fluid no-padding">
-					<div id="carousel-cta-1" class="owl-carousel owl-theme carousel-default">
+					<div id="carousel-cta-3" class="owl-carousel owl-theme carousel-default">
 						<div class="item">
 							<div class="bg-cta" style="background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('./assets/images/lien-bg-cta-2.jpg');">
 								<div class="row row-cta">
@@ -324,69 +324,141 @@
 							<h2 class="title-h2">Conheça quem são as nossas seguradoras associadas.</h2>
 						</div>
 					</div>
-					<div class="row row-items">
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
+					<div id="carousel-seguradoras-associadas" class="owl-carousel owl-theme carousel-default">
+						<div class="item">
+							<div class="row row-items">
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
 							</div>
 						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="col-lg-3 col-md-3 col-sm-6">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
+						<div class="item">
+							<div class="row row-items">
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
+								<div class="col-lg-3 col-md-3 col-sm-6">
+									<div class="box-relative">
+										<div class="item-img"></div>
+										<h2>Azul Seguros</h2>
+										<p>+55 43 3132-2070</p>
+										<button>Ir ao site</button>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
